src/main/java/net/mobtalker/mobtalkerscript/v2/compiler/antlr/MtsParser.java
// Generated from Mts.g4 by ANTLR 4.2.2
package net.mobtalker.mobtalkerscript.v2.compiler.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MtsParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, LOCAL=2, FUNCTION=3, LABEL=4, JUMP=5, RETURN=6, END=7, DO=8, IF=9, 
		THEN=10, ELSEIF=11, ELSE=12, WHILE=13, BREAK=14, REPEAT=15, UNTIL=16, 
		FOR=17, IN=18, CMD_SAY=19, CMD_SAY_LAST=20, CMD_SHOW=21, CMD_AT=22, CMD_OFFSET=23, 
		CMD_WITH=24, CMD_SCENE=25, CMD_AS=26, CMD_HIDE=27, CMD_MENU=28, CMD_OPTION=29, 
		LABEL_KEY=30, LPAREN=31, RPAREN=32, LBRACE=33, RBRACE=34, LBRACK=35, RBRACK=36, 
		SEMI=37, COMMA=38, DOT=39, ASSIGN=40, GT=41, LT=42, NOT=43, COLON=44, 
		EQUAL=45, LE=46, GE=47, NOTEQUAL=48, AND=49, OR=50, INC=51, DEC=52, ADD=53, 
		SUB=54, MUL=55, DIV=56, MOD=57, POW=58, STR_CONCAT=59, TBL_APPEND=60, 
		SIZEOF=61, ADD_ASSIGN=62, SUB_ASSIGN=63, MUL_ASSIGN=64, DIV_ASSIGN=65, 
		MOD_ASSIGN=66, POW_ASSIGN=67, CONCAT_ASSIGN=68, NULL=69, BOOLEAN=70, NORMALSTRING=71, 
		LONGSTRING=72, INTEGER=73, FLOAT=74, HEXINTEGER=75, HEXFLOAT=76, BlockComment=77, 
		LineComment=78, Identifier=79;
	public static final String[] tokenNames = {
		"<INVALID>", "WS", "'local'", "'function'", "'label'", "'jump'", "'return'", 
		"'end'", "'do'", "'if'", "'then'", "ELSEIF", "'else'", "'while'", "'break'", 
		"'repeat'", "'until'", "'for'", "'in'", "'say'", "'as conclusion'", "'show'", 
		"'at'", "'offset'", "'with'", "'scene'", "'as'", "'hide'", "'menu'", "'option'", 
		"'::'", "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", "'.'", 
		"'='", "'>'", "'<'", "'not'", "':'", "'=='", "'<='", "'>='", "'!='", "'and'", 
		"'or'", "'++'", "'--'", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'..'", 
		"'[]'", "'#'", "'+='", "'-='", "'*='", "'/='", "'%='", "'^='", "'.='", 
		"'nil'", "BOOLEAN", "NORMALSTRING", "LONGSTRING", "INTEGER", "FLOAT", 
		"HEXINTEGER", "HEXFLOAT", "BlockComment", "LineComment", "Identifier"
	};
	public static final int
		RULE_chunk = 0, RULE_block = 1, RULE_stmt = 2, RULE_expr = 3, RULE_assignExpr = 4, 
		RULE_varExpr = 5, RULE_varSuffix = 6, RULE_varOrExpr = 7, RULE_varAccess = 8, 
		RULE_call = 9, RULE_callArgs = 10, RULE_fieldAccess = 11, RULE_tableCtor = 12, 
		RULE_fieldDef = 13, RULE_elseIfBody = 14, RULE_elseBody = 15, RULE_numericForControl = 16, 
		RULE_genericForControl = 17, RULE_funcName = 18, RULE_funcBody = 19, RULE_command = 20, 
		RULE_commandMenuOption = 21, RULE_nameList = 22, RULE_paramList = 23, 
		RULE_exprList = 24, RULE_varExprList = 25;
	public static final String[] ruleNames = {
		"chunk", "block", "stmt", "expr", "assignExpr", "varExpr", "varSuffix", 
		"varOrExpr", "varAccess", "call", "callArgs", "fieldAccess", "tableCtor", 
		"fieldDef", "elseIfBody", "elseBody", "numericForControl", "genericForControl", 
		"funcName", "funcBody", "command", "commandMenuOption", "nameList", "paramList", 
		"exprList", "varExprList"
	};

	@Override
	public String getGrammarFileName() { return "Mts.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MtsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ChunkContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MtsParser.EOF, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ChunkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chunk; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitChunk(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ChunkContext chunk() throws RecognitionException {
		ChunkContext _localctx = new ChunkContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_chunk);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(52); block();
				}
				break;

			case 2:
				{
				setState(53); expr(0);
				}
				break;
			}
			setState(56); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LOCAL) | (1L << FUNCTION) | (1L << JUMP) | (1L << RETURN) | (1L << DO) | (1L << IF) | (1L << WHILE) | (1L << BREAK) | (1L << REPEAT) | (1L << FOR) | (1L << CMD_SAY) | (1L << CMD_SHOW) | (1L << CMD_SCENE) | (1L << CMD_HIDE) | (1L << CMD_MENU) | (1L << LABEL_KEY) | (1L << LPAREN) | (1L << SEMI))) != 0) || _la==Identifier) {
				{
				{
				setState(58); stmt();
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	 
		public StmtContext() { }
		public void copyFrom(StmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BlankStmtContext extends StmtContext {
		public BlankStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitBlankStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NestedBlockContext extends StmtContext {
		public BlockContext Block;
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public NestedBlockContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitNestedBlock(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WhileLoopContext extends StmtContext {
		public ExprContext Condition;
		public BlockContext Block;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public WhileLoopContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitWhileLoop(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LocalVarDeclrStmtContext extends StmtContext {
		public NameListContext NameList;
		public ExprListContext ExprList;
		public NameListContext nameList() {
			return getRuleContext(NameListContext.class,0);
		}
		public ExprListContext exprList() {
			return getRuleContext(ExprListContext.class,0);
		}
		public LocalVarDeclrStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitLocalVarDeclrStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BreakStmtContext extends StmtContext {
		public BreakStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitBreakStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class GenericForLoopContext extends StmtContext {
		public GenericForControlContext Control;
		public BlockContext Block;
		public GenericForControlContext genericForControl() {
			return getRuleContext(GenericForControlContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public GenericForLoopContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitGenericForLoop(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ReturnStmtContext extends StmtContext {
		public ExprListContext ExprList;
		public ExprListContext exprList() {
			return getRuleContext(ExprListContext.class,0);
		}
		public ReturnStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitReturnStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class GotoStmtContext extends StmtContext {
		public Token Target;
		public TerminalNode Identifier() { return getToken(MtsParser.Identifier, 0); }
		public GotoStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitGotoStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LabelStmtContext extends StmtContext {
		public Token Name;
		public TerminalNode Identifier() { return getToken(MtsParser.Identifier, 0); }
		public LabelStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitLabelStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignmentStmtContext extends StmtContext {
		public AssignExprContext assignExpr() {
			return getRuleContext(AssignExprContext.class,0);
		}
		public AssignmentStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitAssignmentStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LocalFuncDeclrStmtContext extends StmtContext {
		public Token Name;
		public FuncBodyContext Body;
		public TerminalNode Identifier() { return getToken(MtsParser.Identifier, 0); }
		public FuncBodyContext funcBody() {
			return getRuleContext(FuncBodyContext.class,0);
		}
		public LocalFuncDeclrStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitLocalFuncDeclrStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfThenElseContext extends StmtContext {
		public ExprContext Condition;
		public BlockContext Block;
		public ElseIfBodyContext elseIfBody;
		public List<ElseIfBodyContext> ElseIfs = new ArrayList<ElseIfBodyContext>();
		public ElseBodyContext Else;
		public List<ElseIfBodyContext> elseIfBody() {
			return getRuleContexts(ElseIfBodyContext.class);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ElseIfBodyContext elseIfBody(int i) {
			return getRuleContext(ElseIfBodyContext.class,i);
		}
		public ElseBodyContext elseBody() {
			return getRuleContext(ElseBodyContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public IfThenElseContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitIfThenElse(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CommandStmtContext extends StmtContext {
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public CommandStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitCommandStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RepeatLoopContext extends StmtContext {
		public BlockContext Block;
		public ExprContext Condition;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public RepeatLoopContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitRepeatLoop(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CallStmtContext extends StmtContext {
		public CallContext call() {
			return getRuleContext(CallContext.class,0);
		}
		public CallStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitCallStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FuncDeclrStmtContext extends StmtContext {
		public FuncNameContext Name;
		public FuncBodyContext Body;
		public FuncNameContext funcName() {
			return getRuleContext(FuncNameContext.class,0);
		}
		public FuncBodyContext funcBody() {
			return getRuleContext(FuncBodyContext.class,0);
		}
		public FuncDeclrStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitFuncDeclrStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NumericForLoopContext extends StmtContext {
		public NumericForControlContext Control;
		public BlockContext Block;
		public NumericForControlContext numericForControl() {
			return getRuleContext(NumericForControlContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public NumericForLoopContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitNumericForLoop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stmt);
		int _la;
		try {
			setState(134);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new BlankStmtContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(64); match(SEMI);
				}
				break;

			case 2:
				_localctx = new AssignmentStmtContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(65); assignExpr();
				}
				break;

			case 3:
				_localctx = new LocalVarDeclrStmtContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(66); match(LOCAL);
				setState(67); ((LocalVarDeclrStmtContext)_localctx).NameList = nameList();
				setState(70);
				_la = _input.LA(1);
				if (_la==ASSIGN) {
					{
					setState(68); match(ASSIGN);
					setState(69); ((LocalVarDeclrStmtContext)_localctx).ExprList = exprList();
					}
				}

				}
				break;

			case 4:
				_localctx = new CallStmtContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(72); call();
				}
				break;

			case 5:
				_localctx = new CommandStmtContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(73); command();
				}
				break;

			case 6:
				_localctx = new GotoStmtContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(74); match(JUMP);
				setState(75); ((GotoStmtContext)_localctx).Target = match(Identifier);
				}
				break;

			case 7:
				_localctx = new LabelStmtContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(76); match(LABEL_KEY);
				setState(77); ((LabelStmtContext)_localctx).Name = match(Identifier);
				setState(78); match(LABEL_KEY);
				}
				break;

			case 8:
				_localctx = new BreakStmtContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(79); match(BREAK);
				}
				break;

			case 9:
				_localctx = new ReturnStmtContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(80); match(RETURN);
				setState(82);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(81); ((ReturnStmtContext)_localctx).ExprList = exprList();
					}
					break;
				}
				}
				break;

			case 10:
				_localctx = new NestedBlockContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(84); match(DO);
				setState(85); ((NestedBlockContext)_localctx).Block = block();
				setState(86); match(END);
				}
				break;

			case 11:
				_localctx = new WhileLoopContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(88); match(WHILE);
				setState(89); ((WhileLoopContext)_localctx).Condition = expr(0);
				setState(90); match(DO);
				setState(91); ((WhileLoopContext)_localctx).Block = block();
				setState(92); match(END);
				}
				break;

			case 12:
				_localctx = new RepeatLoopContext(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(94); match(REPEAT);
				setState(95); ((RepeatLoopContext)_localctx).Block = block();
				setState(96); match(UNTIL);
				setState(97); ((RepeatLoopContext)_localctx).Condition = expr(0);
				}
				break;

			case 13:
				_localctx = new IfThenElseContext(_localctx);
				enterOuterAlt(_localctx, 13);
				{
				setState(99); match(IF);
				setState(100); ((IfThenElseContext)_localctx).Condition = expr(0);
				setState(101); match(THEN);
				setState(102); ((IfThenElseContext)_localctx).Block = block();
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ELSEIF) {
					{
					{
					setState(103); ((IfThenElseContext)_localctx).elseIfBody = elseIfBody();
					((IfThenElseContext)_localctx).ElseIfs.add(((IfThenElseContext)_localctx).elseIfBody);
					}
					}
					setState(108);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(110);
				_la = _input.LA(1);
				if (_la==ELSE) {
					{
					setState(109); ((IfThenElseContext)_localctx).Else = elseBody();
					}
				}

				setState(112); match(END);
				}
				break;

			case 14:
				_localctx = new NumericForLoopContext(_localctx);
				enterOuterAlt(_localctx, 14);
				{
				setState(114); match(FOR);
				setState(115); ((NumericForLoopContext)_localctx).Control = numericForControl();
				setState(116); match(DO);
				setState(117); ((NumericForLoopContext)_localctx).Block = block();
				setState(118); match(END);
				}
				break;

			case 15:
				_localctx = new GenericForLoopContext(_localctx);
				enterOuterAlt(_localctx, 15);
				{
				setState(120); match(FOR);
				setState(121); ((GenericForLoopContext)_localctx).Control = genericForControl();
				setState(122); match(DO);
				setState(123); ((GenericForLoopContext)_localctx).Block = block();
				setState(124); match(END);
				}
				break;

			case 16:
				_localctx = new FuncDeclrStmtContext(_localctx);
				enterOuterAlt(_localctx, 16);
				{
				setState(126); match(FUNCTION);
				setState(127); ((FuncDeclrStmtContext)_localctx).Name = funcName();
				setState(128); ((FuncDeclrStmtContext)_localctx).Body = funcBody();
				}
				break;

			case 17:
				_localctx = new LocalFuncDeclrStmtContext(_localctx);
				enterOuterAlt(_localctx, 17);
				{
				setState(130); match(LOCAL);
				setState(131); match(FUNCTION);
				setState(132); ((LocalFuncDeclrStmtContext)_localctx).Name = match(Identifier);
				setState(133); ((LocalFuncDeclrStmtContext)_localctx).Body = funcBody();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
